<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_toolbar"
    android:minHeight="?attr/actionBarSize"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <RelativeLayout
        android:id="@+id/relative_layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/toolbar_menu_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_white_24dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/icon_navigation_drawer" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/MyNews"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/toolbar_menu_button"/>


        <ImageButton
            android:id="@+id/toolbar_menu_search"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_toStartOf="@+id/toolbar_menu_notif"
            android:contentDescription="@string/icon_for_search_request" />

        <ImageButton
            android:id="@+id/toolbar_menu_notif"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/icon_notif_choosing" />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>